--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brisa de Lilás – Rosa Solar</title>
+  <meta name=
+  <title>Rosa Solar</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -16,6 +17,6 @@
     <p id="info">Carregando posição do Sol...</p>
   </div>
 
-  <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/suncalc/1.9.0/suncalc.min.js"></script>
 </body>
 </html>
